# aftr

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
src/snapshots/: aftr__tests__whitepaper_2.snap  aftr__tests__whitepaper_3.snap
